--- a/scss/basic/style.scss
+++ b/scss/basic/style.scss
@@ -9,4 +9,5 @@
 @import '../block/allocation';
 @import '../block/debitCart';
 @import '../block/contactAddress';
+@import '../block/memeComunity';
 @import 'media';
