--- a/scss/block/_memeComunity.scss
+++ b/scss/block/_memeComunity.scss
@@ -1,3 +1,48 @@
 .memeComunity {
     padding: 100px 0;
+    &__wrapper {
+        display: flex;
+        align-items: start;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    &__left {
+        margin-top: 50px;
+        max-width: 600px;
+        &-title {
+            font-weight: 900;
+            font-size: 70px;
+            line-height: 80px;
+            color: #c41220;
+            margin-bottom: 50px;
+        }
+        &-box {
+            background-color: #070734;
+            background-image: url(../images/Grain_Latest.png);
+            background-position: 0 0;
+            background-size: 300px;
+            border-radius: 10px;
+            padding: 2rem;
+            font-family: Open Sans, sans-serif;
+            font-size: 21px;
+            color: #fff;
+           line-height: 35px;
+        }
+        &-subtitle {
+            font-family: Open Sans, sans-serif;
+            font-size: 28px;
+            color:#d3b136;
+            font-weight: 700;
+        }
+    }
+    &__right {
+        max-width: 561px;
+        max-width: 580px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;   
+        }
+    }
+   
 }
