--- a/scss/basic/style.scss
+++ b/scss/basic/style.scss
@@ -10,4 +10,7 @@
 @import '../block/debitCart';
 @import '../block/contactAddress';
 @import '../block/memeComunity';
+@import '../block/persone';
+@import '../block/FAQ';
+@import '../block/footer';
 @import 'media';
