--- a/scss/basic/_media.scss
+++ b/scss/basic/_media.scss
@@ -21,13 +21,38 @@
             height: 30px;
             font-size: 16px;
             margin-left: 280px;
-        }
+        }       
+    }
+    .menu {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #fff;
+        z-index: 1;
+        padding: 15px;
+        border: 1px solid #000;  
+        visibility: hidden;
+        opacity: 0;      
+        transition: all .4s;
+        &__link {
+            display: block;
+            color: #000000;            
+            margin: 0 auto;
+            margin-bottom: 10px;
+        }        
     }
     .hamburger {
         display: flex;
     }
+    .menu {
+        &.active {
+            top: 80px;
+        }
+    }
     .main {
-        padding-top: 50px;
+        padding-top: 20px;
         &__title {
             font-size: 40px;
             line-height: 50px;
@@ -61,6 +86,30 @@
             line-height: 30px;
         }
     }
+    .persone {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        &__box {
+            background-size: 1000px;
+            margin-bottom: 50px;   
+        }
+        &__img {
+            width: 600px;
+            height: 475px;
+        }
+        &__title {
+            font-size: 2rem;
+            line-height: 1rem;
+        }
+        &__subtitle {
+            font-size: 4rem;
+            line-height: 6rem;
+        }
+        &__text {
+            font-size: 2rem;
+            line-height: 1rem;
+        }
+    }
 }
 @media(max-width: 760px) {
     .container {
@@ -75,8 +124,8 @@
             margin-left: 100px;
         }
     }
+    
     .main {
-        padding-top: 10px;
         &__title {
             font-size: 30px;
             line-height: 35px;
@@ -136,6 +185,60 @@
             gap: 30px;
         }
     }
+    .persone {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        &__box {
+            background-size: 556px;
+            margin-bottom: 50px;   
+        }
+        &__img {
+            width: 400px;
+            height: 275px;
+        }
+        &__title {
+            font-size: 2rem;
+            line-height: 2rem;
+        }
+        &__subtitle {
+            font-size: 4rem;
+            line-height: 6rem;
+        }
+        &__text {
+            font-size: 2rem;
+            line-height: 2rem;
+        }
+    }
+    .FAQ {
+        &__title {
+            font-size: 3rem;
+            line-height: 3.5rem;
+        }
+        &__box {
+            margin-bottom: 20px;
+            &.active {
+                margin-bottom: 150px;
+                .FAQ__response {
+                    display: block;
+                    margin-bottom: 40px;
+                }
+            }
+        }
+        &__item {
+            gap: 90px;
+            &-title {
+                font-size: 1rem;
+            }
+            &-img {
+                width: 10px;
+                height: 10px;
+            }
+        }
+        &__response {
+            display: none;
+        }
+        
+    }
 }
 @media(max-width: 550px) {
     .main {
@@ -170,5 +273,24 @@
                 font-size: 20px;
             }
         }
+    }
+    .memeComunity {
+        &__left {
+            order: 2;
+            &-title {
+                font-size: 40px;
+                line-height: 40px;
+                text-align: center;
+            }
+        }
+        &__right {
+            order: 1;
+        }
+    }
+    .FAQ {
+        padding: 0 10px;
+    }
+    .footer {
+        padding: 20px 10px;
     }
 }
