--- a/scss/block/_hamburger.scss
+++ b/scss/block/_hamburger.scss
@@ -15,4 +15,19 @@
         border-radius: 2px;
         margin-bottom: 5px;
     }
+    &.active {
+        .hamburger {
+            &__first {
+                transition: all .4s;
+                transform: rotate(-45deg) translate(2px, 3px) ;
+            }
+            &__second {
+                display: none;
+            }
+            &__three {
+                transition: all .4s;
+                transform: rotate(45deg) translate(-2px, -6px);
+            }
+        } 
+    }
 }
