--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -4,6 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: center; 
+    position: relative;
+    z-index: 3;
+    transition: all .4s;
     &__wrapper {
         width: 1000px;
         display: flex;
@@ -38,15 +41,19 @@
         align-items: center;
         justify-content: center;
         gap: 5px;
+        cursor: pointer;
         &-info {
             font-weight: 400;
             font-size: 16px;
             color: #fff;
         }
         &-arrow {
-            width: 16px;
-            height: 16px;
+            width: 12px;
+            height: 12px;
             transform: rotate(180deg);
+            display: flex;
+            align-items: center;
+            justify-content: center;
             img {
                 width: 100%;
                 height: 100%;
@@ -66,5 +73,55 @@
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+    &.active {
+        .header__more-arrow {
+            transform: rotate(0deg);
+        }
+    }
+}
+.menu {
+    display: none;
+    &.active {
+        top: 100px;
+        visibility: visible;
+        opacity: 1;  
+        .hamburger {
+            &__first {
+                transform: rotate(-90deg);
+            }
+            &__second {
+                display: none;
+            }
+            &__three {
+                transform: rotate(90deg);
+            }
+        }  
+    }  
+}
+
+.popupMenu {
+    position: absolute;
+    top: 200px;
+    left: 63%;
+    border: 1px solid #000;
+    padding: 10px;
+    z-index: 20;
+    background-color: #fff;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .4s;
+    &__item {
+        margin-bottom: 10px;
+    }
+    &__link {
+        color: #000;
+        font-size: 20px;
+    }
+    &.active {
+        visibility: visible;
+        opacity: 1;
+        top: 90px;
+       
     }
 }
